<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SIGN UP</string>
    <string name="email_text">Email Address</string>
    <string name="signup_error_message">You\'ve got to enter something in all fields.</string>
    <string name="sign_up_error_title">Oops</string>
    <string name="login_error_message">Check your username and password</string>
    <string name="login_error_title">Oops</string>
    <string name="menu_logout_label">Logout</string>
    <string name="no_new_messages">No new messages</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="generic_error_title">Sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="external_storage_error">Can\'t access external storage</string>
    <string name="general_error">Something went wrong</string>
    <string name="video_warning">Your video must be smaller than 10MB</string>
    <string name="file_not_found_error">"Can't find the file"</string>
    <string name="file_too_big">File too big</string>
    <string name="choose_friends">Choose some friends first</string>
    <string name="action_send_label">Send</string>
    <string name="file_error">"There\'s something wrong with that file"</string>
    <string name="success_message">Message sent</string>
    <string name="error_sending_message">Wasn\'t able to send that</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="ribbit_background">Ribbit Frog Background Image</string>
    <string name="subTitle">A Treehouse Project</string>
    <string name="CANCEL">cancel_button_label</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="user_avatar">User avatar</string>
    <string name="user_checkmark">user_checkmark</string>
    <string name="new_message">"You have a new Ribbit message from "</string>

</resources>
