<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="au.com.wsit.ribbit.ui.SignUpActivity">
    <ImageView
        android:id="@+id/backgroundImage"
        android:src="@drawable/background"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subTitle"
        android:text="@string/subTitle"
        style="@style/AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextlayout"
        style="@style/AuthFieldContainer">

    <EditText
        android:id="@+id/userNameField"
        android:hint="@string/username_hint"
        style="@style/AuthEditText">
    <requestFocus/>
    </EditText>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        style="@style/AuthEditText"/>

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailField"
        android:hint="@string/email_text"
        style="@style/AuthEditText"/>
  </LinearLayout>

<ImageView
    android:id="@+id/buttonDivider"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editTextlayout"
    android:layout_centerHorizontal="true"
    android:src="@drawable/button_divider"
    />
    <Button
        android:text="@string/title_activity_sign_up"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/editTextlayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonDivider"
        style="@style/AuthButton"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_marginRight="0dp"

        />

    <Button
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButton"
        android:layout_below="@+id/editTextlayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonDivider"
        style="@style/AuthButton"
        android:layout_marginLeft="0dp"

        />
</RelativeLayout>
